# Golang-bot

./: .gitignore  Dockerfile  Makefile  README.md  category.go  config.go  config.yaml  docker-compose.yaml  docker-entrypoint.sh  docker_entrypoint.sh  entry_point.sh  env.example  fetch_currnet_rate.go  go.mod  go.sum  handlers.go  log_item.go  main.go  parser.go  parser_test.go  stats.pb.go  user.go  utils.go
migrations/: 20190312173259_init.sql  20190312213523_add_input_logger.sql  20190530155411_remove_category.sql  20191002214327_remove_tables.sql  20210315230906_drop_category_table.sql
money_bot/: category.go  config.go  fetch_currnet_rate.go  handlers.go  input_logger.go  log_item.go  parser.go  parser_test.go  user.go  utils.go
moneybot/: api.go  app.go  category.go  config.go  handlers.go  input_log.go  input_logger.go  log_item.go  log_item_repository.go  models.go  monobank_webhook.go  parser.go  parser_test.go  user.go  utils.go
moneybot2/: config.go  handlers.go  input_log.go  log_item.go  models.go  parser.go  user.go  utils.go
stats/: Dockerfile  README.md  exporter.py  ploting.py  pyproject.toml  server.py  stats.pb.go  stats_pb2_grpc.py
stats/ploting/: adapter.py  ploting.py  server.py  stats_grpc.py  stats_pb2.py  stats_pb2_grpc.py
stats/proto/: stats.proto
