[tool.poetry]
name = "stats"
version = "0.1.0"
description = ""
authors = ["Dobrovolsky Bogdan <bogdan.gm24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio-tools = "^1.19"
pandas = "^0.24.1"
matplotlib = "^3.0"
numpy = "^1.16"
grpclib = "^0.2.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
